--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ body {
   padding-right: 10px;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 24px;
 }
 
 .column a::before {
@@ -151,11 +152,11 @@ body {
   padding-top: 1rem;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   font-weight: bold;
-  color: orange;
+  color: white;
 }
 
 .icon-btn {
-  background-color: #1c1c1c;
+  background-color: #091321;
   border: none;
   border-radius: 12px;
   padding: 10px;
@@ -166,4 +167,50 @@ body {
   display: flex;
   align-items: center;
   gap: 8px;
+}
+body {
+  font-family: Arial, sans-serif;
+}
+
+.navbar {
+  background-color: #0b1829ee;
+  padding: 10px;
+  position: relative;
+}
+
+.nav-item-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.nav-item {
+  color: white;
+  padding: 10px 15px;
+  cursor: pointer;
+}
+
+.mega-menu {
+  display: none; /* مخفی کردن ساب‌منو به صورت پیش‌فرض */
+  position: absolute;
+  background-color: #0b1829ee;
+  z-index: 1;
+  opacity: 0; /* شفافیت اولیه */
+  transform: translateY(-10px); /* جابجایی اولیه */
+  transition: opacity 0.3s ease, transform 0.3s ease; /* انیمیشن */
+}
+.mega-menu.open {
+  display: block; /* نمایش ساب‌منو */
+  opacity: 1; /* شفافیت کامل */
+  transform: translateY(0); /* جابجایی به موقعیت اصلی */
+  font-size: 16px;
+  font-weight: bold;
+}
+.column {
+  padding: 15px;
+}
+.menu {
+  display: none; /* مخفی کردن منوی ورود/عضویت */
+}
+.dropdown:hover .menu {
+  display: block; /* نمایش منوی ورود/عضویت هنگام هاور */
 }
